overflown tabGroup tab fix

--- a/frontend/packages/component-library/src/tabs/tabs.module.scss
+++ b/frontend/packages/component-library/src/tabs/tabs.module.scss
@@ -267,6 +267,14 @@
 
   li {
     flex-grow: 1;
+    flex-shrink: 1;
+    flex-basis: 0;
+    min-width: 0;
+
+    // Fix issue when tooltip is added to the tab that has too long label and tab becomes wider then needed
+    > div {
+      width: 100%;
+    }
   }
 
   li button[role='tab'] {
@@ -287,6 +295,9 @@
     span {
       @include typography.heading-xs;
       margin: 0;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
 
     &:hover {
